welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:9: error: Int(1) does not take parameters
  if (getY() == getMondeHauteur -1()) {
                                  ^